--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "16.8.6",
     "react-native": "0.60.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
     "ws": "^7.1.0"
   },
   "devDependencies": {
